<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BWA Movie</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="memulai">MEMULAI</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_description">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_description">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_description">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang, \n Angga Rizky</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="title_detail">Avengers: Infinity War</string>
    <string name="genre_detail">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="story_description">The Avengers must stop Thanos, a mad Titan, and his  army from getting their hands on all the infinity stones.  However, the mad Titan is prepared to go to any lengths  to carry out his insane plan.</string>
    <string name="whos_played">Who’s Played</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="alita_battle">Alita Battle</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">BATALKAN</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="items">Items</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="sukse_description">Tiket telah berhasil dibeli dan\nselamat menikmati film</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="home">Home</string>
    <string name="error_checkout">Saldo pada e-wallet kamu tidak mencukupi\nuntuk melakukan transaksi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">SIMPAN DATA BARU</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>